@@ -72,7 +72,7 @@ private:
     Sidebar *m_sidebar;
     QDockWidget *m_dockTimeLine;
     TimeLine    *m_timeLine;
-    QDockWidget *m_previewerWidget;
+    // QDockWidget *m_previewerWidget;
     Previewer *m_previewer;
     MetaDataEditor *m_metaEditor;
 
